--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     </label>
                     <label  class="form-group d-flex flex-column mt-2">
                       <span class="text-white input-label">
-                        رقم الهاتف
+                        رقم الجوال
                       </span>
-                        <input placeholder="ادخل رقم الهاتف"  type="text" class="form-control mt-2">
+                        <input placeholder="ادخل رقم الجوال"  type="text" class="form-control mt-2">
                     </label>
                     <label  class="form-group d-flex flex-column mt-2">
                       <span class="text-white input-label">
@@ -151,24 +151,31 @@
                 نحن نقدم خدمات رعاية صحية عالية الجودة لجميع أفراد الأسرة.
             </div>
             <div class="col-sm-12 row mt-5 mobile-service">
-                <div class="col-sm-3 col-12 first-service-box d-flex flex-column "   >
-                    <img src="./asset/images/service_one.jpg" width="320" height="320" alt="service photo">
-                    <a href="index.html" class="service-button btn hvr-bounce-to-right">
-                        عناية عامة
-                    </a>
+                <div class="col-sm-4 col-12 d-flex justify-content-center service-out">
+                    <div class="col-sm-10 d-flex flex-column">
+                        <img src="./asset/images/service_one.jpg" width="320" height="320" alt="service photo">
+                        <a href="index.html" class="service-button btn hvr-bounce-to-right">
+                            عناية عامة
+                        </a>
+                    </div>
                 </div>
-                <div class="col-sm-3 col-12 d-flex flex-column service-box" >
-                    <img src="./asset/images/service_two.jpg" width="320" height="320" alt="service photo">
-                    <a href="index.html" class="service-button btn hvr-bounce-to-right">
-                       طب الأسنان التجميلية
-                    </a>
+                <div class="col-sm-4 col-12 d-flex justify-content-center service-out">
+                    <div class="col-sm-10  d-flex flex-column">
+                        <img src="./asset/images/service_two.jpg" width="320" height="320" alt="service photo">
+                        <a href="index.html" class="service-button btn hvr-bounce-to-right">
+                            طب الأسنان التجميلية
+                        </a>
+                    </div>
                 </div>
-                <div class="col-sm-3 col-12 d-flex flex-column service-box">
-                    <img src="./asset/images/service_three.jpg" width="320" height="320" alt="service photo">
-                    <a href="index.html" class="service-button btn hvr-bounce-to-right">
-                       طب الأسنان الترميمي
-                    </a>
+                <div class="col-sm-4 col-12 d-flex justify-content-center service-out">
+                    <div class="col-sm-10 d-flex flex-column">
+                        <img src="./asset/images/service_three.jpg" width="320" height="320" alt="service photo">
+                        <a href="index.html" class="service-button btn hvr-bounce-to-right">
+                            طب الأسنان الترميمي
+                        </a>
+                    </div>
                 </div>
+
             </div>
         </div>
         <div class="row justify-content-center more-box more-box-above">
@@ -192,7 +199,7 @@
                     نقدم مجموعة كبيرة من الإجراءات لمساعدتك في الحصول على الابتسامة المثالية
                 </small>
             </div>
-            <div class="row justify-content-center more-box pb-4" data-aos="fade-left"
+            <div style="position:relative;z-index: 3" class="row justify-content-center more-box pb-4" data-aos="fade-left"
                  data-aos-easing="linear"
                  data-aos-duration="800">
                 <button class="btn btn-ellipse btn-elipse-mobile" style="position: relative;z-index: 2">
