--- a/index.html
+++ b/index.html
@@ -222,22 +222,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5 d-flex flex-row  pb-5"  data-aos="fade-right"
+                <div class="col-sm-5 d-flex flex-row "  data-aos="fade-right"
                      data-aos-offset="100"
-                     data-aos-duration="800"  >
+                     data-aos-duration="800" >
                     <div class="box-one-general" style="" >
                         <div class="right-box-general" style="">
-                            رقم الطوارىء
+                            للطوارىء
                         </div>
                     </div>
-                    <div class="row d-flex flex-column" style="background: #F1F3F9; width: 80%">
+                    <div class="row d-flex flex-column pb-5" style="background: #F1F3F9; width: 80%">
                         <div class="col-sm-12 mt-4">
                             <span class="fas fa-heart general-icon heart-icon"></span>
                         </div>
                         <div class="col-sm-12 text-start sat-to-thurs" style="font-family: Droid-kofi; margin-top: 3em;font-size: 1.2em;text-transform: none;text-decoration: none!important;">
                             <a class="emergency-num" href="tel:1-800-1234-567" style="text-decoration: none">1-800-1234-567</a>
                         </div>
+                        <div class="col-sm-12 text-start our-accounts">
+                            حسابنا على فيسبوك
+                        </div>
 
+                        <a href="index.html" class=" social-icon social-icon-general">
+                            <span class="fab fa-facebook-f  social-itself">
+
+                            </span>
+                        </a>
                     </div>
                 </div>
 
