--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-5 d-flex flex-row "  data-aos="fade-right"
+                <div class="col-sm-5 d-flex flex-row mobile-edition "  data-aos="fade-right"
                      data-aos-offset="100"
                      data-aos-duration="800" >
                     <div class="box-one-general" style="" >
@@ -230,7 +230,7 @@
                             للطوارىء
                         </div>
                     </div>
-                    <div class="row d-flex flex-column pb-5" style="background: #F1F3F9; width: 80%">
+                    <div class="row d-flex flex-column pb-5 " style="background: #F1F3F9; width: 80%">
                         <div class="col-sm-12 mt-4">
                             <span class="fas fa-heart general-icon heart-icon"></span>
                         </div>
