--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
 
     </div>
 </main>
-<footer class="container-fluid" style="background-color: #18afd3">
-<div class="row"    data-aos="fade-left"
-     data-aos-duration="800">
+<footer class="container-fluid" style="background-color: #18afd3" >
+<div class="row" data-aos="fade-left"
+     data-aos-duration="1000" data-aos-offset="0">
     <div class="col-sm-5 d-flex justify-content-center footer-logo-mobile"
 
     >
@@ -268,7 +268,7 @@
             لدى G.M.G
         </a>
     </div>
-    <div class="col-sm-3 d-flex flex-row pt-4 pb-4 mr">
+    <div class="col-sm-3 d-flex flex-row pt-4 pb-4 mr" >
         <span style="" class="social-icon">
             <span class="fab fa-facebook-f social-itself" >
             </span>
