--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="row nav-container">
           <div class="col-sm-3 col-12">
-        <img src="./asset/images/logo.jpeg" class="logo" width="206px" height="63px" alt="">
+        <img src="./asset/images/logo.png" class="logo" width="206px" height="63px" alt="">
           </div>
             <div class="col-sm-9 col-12">
 
@@ -260,7 +260,7 @@
     <div class="col-sm-5 d-flex justify-content-center footer-logo-mobile"
 
     >
-        <img src="./asset/images/logo.jpeg" class="footer-logo" width="206px" height="63px" alt="">
+        <img src="./asset/images/logo.png" class="footer-logo" width="206px" height="63px" alt="">
     </div>
     <div class="col-sm-4 all-right d-flex flex-column">
          جميع الحقوق محفوظة.
